--- a/views/layouts/app.edge
+++ b/views/layouts/app.edge
@@ -21,7 +21,7 @@
                     <li class="nav-item"><a  class="nav-link">Cerrar Sesion</a></li>
                 </ul>
             </div>
-            <a ><img  src ="../Imagenes/TecNM.png"   width="250"></a>
+            <a ><img  src ="../imagenes/TecNM.png"   width="250"></a>
         </header>
         <div> 
             @!section('content')
