--- a/views/Kardex.edge
+++ b/views/Kardex.edge
@@ -1,4 +1,4 @@
-@layout('layouts.apps')
+@layout('layouts.app')
 @section('content')
 <table border="1">
                     @each(alumno in alumnos)
