Cambios de insertar (agregado de carpeta de Css)

--- a/views/Kardex.edge
+++ b/views/Kardex.edge
@@ -39,13 +39,13 @@
                             </tr>
                             <div class="materia">
                                 <tr>
-                                    <td>{{alumno.kardex.regsemestre.asignatura.no}}</td>
-                                    <td>{{alumno.kardex.regsemestre.asignatura.clave}}</td>
-                                    <td>{{alumno.kardex.regsemestre.asignatura.materia}}</td>
-                                    <td>{{alumno.kardex.regsemestre.asignatura.creditos}}</td>
-                                    <td>{{alumno.kardex.regsemestre.asignatura.calificacion}}</td>
-                                    <td>{{alumno.kardex.regsemestre.asignatura.evaluacion}}</td>
-                                    <td>{{alumno.kardex.regsemestre.asignatura.observaciones}}</td>
+                                    <td>{{alumno.kardex.regsemestre.asignatura[0].no}}</td>
+                                    <td>{{alumno.kardex.regsemestre.asignatura[0].clave}}</td>
+                                    <td>{{alumno.kardex.regsemestre.asignatura[0].materia}}</td>
+                                    <td>{{alumno.kardex.regsemestre.asignatura[0].creditos}}</td>
+                                    <td>{{alumno.kardex.regsemestre.asignatura[0].calificacion}}</td>
+                                    <td>{{alumno.kardex.regsemestre.asignatura[0].evaluacion}}</td>
+                                    <td>{{alumno.kardex.regsemestre.asignatura[0].observaciones}}</td>
                                 </tr>
                                 <tr>
                                     <td colspan="3"></td>
