Cambios en login

--- a/views/layouts/app.edge
+++ b/views/layouts/app.edge
@@ -26,12 +26,9 @@
             @!section('content')
         </div>
     </body>
-    <footer>
-      <div >     
-      <h4>Instituto Tecnologico de Tepic</h4>
-      <p>"Sabiduria Tecnologica #2595, Lagos del contry."</p>  
-      <p>(311) 211 9400</p>
-      <p>Tepic, Nayarit. Mexico</p>
-      </div>
-    </footer>    
+  <footer>
+	"Sabiduría tecnológica, pasión de nuestro espíritu"
+ 	<br>Av. Tecnológico # 2595, Col. Lagos del Country. Tepic, Nayarit. México
+ 	<br>(311) 211 94 00  
+  </footer>  
 </html>
